update azure
