# app/Controllers/AuthorsController.cs
@@ -18,19 +18,19 @@ namespace app.Controllers
             _context = context;
         }
 
-        [HttpGet("story_detail/{storyid}")]
-        public async Task<ActionResult> GetStoryRelateAuthor(int storyid)
-        {
-            var 
+        //[HttpGet("story_detail/{storyid}")]
+        //public async Task<ActionResult> GetStoryRelateAuthor(int storyid)
+        //{
+        //    var 
 
-            var chapters = await _context.Stories.Where(c => c.StoryId == storyid && c.Status > 0)
-                .Include(c => c.Author)
-                .Include(c => c.Users)
-                .Select(c => c.Author)
-                .OrderByDescending(c => c.ChapterId)
-                .Skip(pageSize * (page - 1)).Take(pageSize)
-                .ToListAsync();
-            return _msgService.MsgReturn("Story Chapter Detail", chapters);
-        }
+        //    var chapters = await _context.Stories.Where(c => c.StoryId == storyid && c.Status > 0)
+        //        .Include(c => c.Author)
+        //        .Include(c => c.Users)
+        //        .Select(c => c.Author)
+        //        .OrderByDescending(c => c.ChapterId)
+        //        .Skip(pageSize * (page - 1)).Take(pageSize)
+        //        .ToListAsync();
+        //    return _msgService.MsgReturn("Story Chapter Detail", chapters);
+        //}
     }
 }
